Thu Jan 26 21:14:59 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Fix ignore bug in checking for topic.
          Extra logging for compatibility checks (level > 3).

Thu Jan 26 20:52:41 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/transport/rtps_reliability/rtps_reliability.cpp:

          Worked-around bad code generation with optimize=1 on older GCCs.

Thu Jan 26 19:37:23 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Test ignore_participant, ignore_publication, ignore_subscription.

Thu Jan 26 18:40:30 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Populate the originalSequence_ member of DataSampleListElement
          when setting up a DURABILITY resend.

        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:

          Fix setting of OriginalWriterInfo when it's the only inlineQos.
          Set the reader EntityId and add an INFO_DST for its corresponding
          GuidPrefix when the DataSampleListElement has 1 entry in
          subscription_ids_.  This is used for DURABILITY resends.

        * bin/dcps_tests.lst:
        * tests/DCPS/TransientLocalTest/rtps.ini:
        * tests/DCPS/TransientLocalTest/run_test.pl:
        * tests/DCPS/TransientLocalTest/tcp.ini:

          Run this test with the rtps_udp transport in addition to tcp.

        * tests/DCPS/TransientLocalTest/pub.ini:
        * tests/DCPS/TransientLocalTest/sub.ini:

          Removed these files.

Thu Jan 26 18:01:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.inl:

          Allow customize_queue_element() to return null.

        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.h:
        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.inl:
        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
